fix(ui5-tree): alignment of items (#3424)

--- a/packages/main/src/themes/TreeListItem.css
+++ b/packages/main/src/themes/TreeListItem.css
@@ -64,11 +64,12 @@
 }
 
 .ui5-li-tree-toggle-box {
-    width: var(--_ui5-tree-toggle-box-width);
-    height: var(--_ui5-tree-toggle-box-height);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	min-width: var(--_ui5-tree-toggle-box-width);
+	min-height: var(--_ui5-tree-toggle-box-height);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-shrink: 0;
 }
 
 .ui5-li-tree-toggle-icon {
